--- a/Projetos/Pokedex/assets/style/index.css
+++ b/Projetos/Pokedex/assets/style/index.css
@@ -21,8 +21,6 @@ main{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-
-
 }
 
 #search-box{
@@ -54,7 +52,13 @@ main{
     height: 4.375em;
     
     border-radius: 1.250em;
-    
+ 
+}
+
+#surprise-me-button span {
+    font-family: cursive;
+    font-weight: bolder;
+    font-size: 1.50em;
 }
 
 #news-panel{
