Atualizações da Pokedex

--- a/Projetos/Pokedex/assets/style/index.css
+++ b/Projetos/Pokedex/assets/style/index.css
@@ -38,7 +38,9 @@ main{
     width: 23.375em;
     height: 4.375em;
     border-radius: 0.625em;
-    background-color: white;
+    
+    text-align: center;
+    
 }
 
 #search-pokemon-button{
@@ -86,6 +88,8 @@ main{
     display: flex;
     align-items: center;
     justify-content: space-around;
+
+    border: 1px solid white;
     
 }
 
