--- a/Projetos/Pokedex/assets/style/style.css
+++ b/Projetos/Pokedex/assets/style/style.css
@@ -24,30 +24,38 @@ body{
     width: 100%;
     max-width: 1280px;
     border-radius: 2em;
-    /* background-image: url("assets\img\container_bg.jpg");
+/*     background-image: url("assets/img/container_bg.jpg");
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat; */
-    
 }
 
 header{
     width: 100%;
     height: 5.625em;
     background-color: #F98989;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 main{
-
-    
 
     max-width: 100%;
     height: 37.500em;
     background-color: #545454;
 }
 
-
 footer{
     width: 100%;
-    height: 5.625em;
+    height: 2.625em;
     background-color: #d9d9d9;
+
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;  
+    
+    color: #545454;
 }
