Finalização do curso React para iniciantes

--- a/React/Aula 01 - 17-03-2023/React/hello-react/src/components/Post.module.css
+++ b/React/Aula 01 - 17-03-2023/React/hello-react/src/components/Post.module.css
@@ -3,3 +3,9 @@
     margin: 10px 1px 10px auto;
     color: var(--white);
 }
+
+.autor{
+    display: flex;    
+    justify-content: space-between;
+    padding: 1rem;
+}
