--- a/React/react-para-completos-iniciantes/src/components/Task.css
+++ b/React/react-para-completos-iniciantes/src/components/Task.css
@@ -23,3 +23,9 @@
     cursor: pointer;
     margin: 0 5px;
 }
+
+.buttons-container{
+    width: 30%;
+    display: flex;
+    justify-content: flex-end;
+}
