Atualização com aula do dia 20-03-2022

--- a/React/Aula 01 - 17-03-2023/React/hello-react/src/components/Post.module.css
+++ b/React/Aula 01 - 17-03-2023/React/hello-react/src/components/Post.module.css
@@ -1,11 +1,15 @@
 .post{
+    color: var(--white);
     background-color: var(--gray-600);
     margin: 10px 1px 10px auto;
-    color: var(--white);
 }
 
-.autor{
+.author{
     display: flex;    
     justify-content: space-between;
     padding: 1rem;
+}
+
+.content{
+
 }
